# rl-simulations

./: .gitignore  LICENSE  README.md  pyproject.toml  write-up.md
config/: palette.yaml
figures/: batch_comparison.py  cognition.py  cognition_ood.py  equal_reward.py  outcome_density.py  outcome_density_labelled.py  simplexfig.py  unequal_reward.py  unequal_reward_labelled.py
src/rl_dynamics/: __init__.py  cognition.py  dynamics.py  palette.py  policy.py  simplex.py  svg.py
tests/: test_cognition.py  test_dynamics.py  test_js_parity.py  test_policy.py  test_simplex.py
widgets/: build.py  core.js  fixtures.json  gen_fixtures.py  gen_preview.py  render.js
widgets/src/: cognition-ood.html  finite-sample.html  simplex-explainer.html
