[project]
name = "rl-dynamics"
version = "0.1.0"
description = "A toy model of finite-sample RL learning dynamics: simulation machinery and visualisations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
